# gOcra

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  README.txt
examples/test_3T/: CMakeLists.txt  Model3T.h  main.cpp  main_gshc.cpp
examples/test_GHCJT/: CMakeLists.txt  Model3T.cpp  OrthonormalFamily.cpp  OrthonormalFamily.h  main.cpp  main2.cpp
examples/test_icub/: CMakeLists.txt  icubfixed.cpp  icubfixed.h  main.cpp  main6t.cpp  main_ghc.cpp
examples/test_kuka/: CMakeLists.txt  kukafixed.cpp  kukafixed.h  kukafixed2.cpp  kukafree.cpp  kukafree.h  main.cpp  main_1task.cpp  main_2tasks.cpp  main_3tasks.cpp  main_4tasks.cpp  main_5tasks.cpp  main_ghc.cpp  main_ghc_realkuka.cpp
include/gocra/: GHCJTController.h  GHCJTController.h~
include/gocra/Tasks/: GHCJTTask.h  GHCJTTask.h~
include/gocra/Tasks/Managers/: gOcraCoMTaskManager.h
include/orcisir/: GHCJTController.h  ISIRController.h  ISIRDebug.h  Model.h  OrthonormalFamily.h  Performances.h
include/orcisir/Constraints/: ContactAvoidanceConstraint.h  GSHCAccelerationConstraint.h  ISIRConstraint.h  JointLimitConstraint.h  TorqueLimitConstraint.h
include/orcisir/Features/: ISIRFeature.h  ISIRPartialState.h
include/orcisir/Solvers/: ISIRSolver.h  OneLevelSolver.h
include/orcisir/Tasks/: GHCJTTask.h  ISIRTask.h
pkg-config/: CMakeLists.txt
src/: CMakeLists.txt  CMakeLists.txt~  GHCJTController.cpp  ISIRController.cpp  ISIRDebug.cpp  OrthonormalFamily.cpp
src/Constraints/: ContactAvoidanceConstraint.cpp  GSHCAccelerationConstraint.cpp  ISIRConstraint.cpp  JointLimitConstraint.cpp  TorqueLimitConstraint.cpp
src/Features/: ISIRFeature.cpp  ISIRPartialState.cpp  gOcraFeature.cpp  gOcraPartialState.cpp
src/Solvers/: ISIRSolver.cpp  OneLevelSolver.cpp
src/Tasks/: GHCJTTask.cpp  ISIRTask.cpp
src/Tasks/Managers/: gOcraCoMTaskManager.cpp
